third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/dereference_combo.exp

Diagnostics:
error: mutable reference in local `s` requires exclusive access but is borrowed
   ┌─ tests/reference-safety/v1-tests/dereference_combo.move:13:9
   │
12 │         if (cond) f = &s.f else f = &other.f;
   │                       ---- previous field borrow
13 │         *s;
   │         ^^ requirement enforced here
14 │         *f;
   │         -- conflicting reference `f` used here

error: mutable reference in local `s` requires exclusive access but is borrowed
   ┌─ tests/reference-safety/v1-tests/dereference_combo.move:21:9
   │
20 │         if (cond) f = &s.f else f = &s.g;
   │                       ----          ---- previous field borrow
   │                       │
   │                       previous field borrow
21 │         *s;
   │         ^^ requirement enforced here
22 │         *f;
   │         -- conflicting reference `f` used here
